src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__empty_code.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_token_order
---
[
  {
    "token_type": "EOF",
    "literal": ""
  }
]
