src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case1.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_tokens
---
[
  "LET",
  {
    "IDENTIFIER": {
      "literal": "x"
    }
  },
  "SEMI_COLON",
  "EOF"
]
