src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case2.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_token_order
---
[
  {
    "token_type": "LET",
    "literal": "let"
  },
  {
    "token_type": "IDENTIFIER",
    "literal": "varX"
  },
  {
    "token_type": "ASSIGN",
    "literal": "="
  },
  {
    "token_type": "INTEGER",
    "literal": "5"
  },
  {
    "token_type": "PLUS",
    "literal": "+"
  },
  {
    "token_type": "INTEGER",
    "literal": "5"
  },
  {
    "token_type": "SEMI_COLON",
    "literal": ";"
  },
  {
    "token_type": "EOF",
    "literal": ""
  }
]
