src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case2.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_tokens
---
[
  "IF",
  "FALSE",
  "RETURN",
  {
    "INTEGER": {
      "literal": "3"
    }
  },
  "SEMI_COLON",
  "EOF"
]
