src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case3.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_token_order
---
[
  {
    "token_type": "IF",
    "literal": "IF"
  },
  {
    "token_type": "TRUE",
    "literal": "TRUE"
  },
  {
    "token_type": "RETURN",
    "literal": "return"
  },
  {
    "token_type": "INTEGER",
    "literal": "3"
  },
  {
    "token_type": "SEMI_COLON",
    "literal": ";"
  },
  {
    "token_type": "ELSE",
    "literal": "else"
  },
  {
    "token_type": "RETURN",
    "literal": "return"
  },
  {
    "token_type": "INTEGER",
    "literal": "45"
  },
  {
    "token_type": "SEMI_COLON",
    "literal": ";"
  },
  {
    "token_type": "EOF",
    "literal": ""
  }
]
