src/lexical_analysis/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case4.snap
---
source: src/lexical_analysis/tests.rs
expression: returned_token_order
---
[
  {
    "token_type": "FUNCTION",
    "literal": "fn"
  },
  {
    "token_type": "EOF",
    "literal": ""
  }
]
